--- a/debian.ti-omap4/changelog
+++ b/debian.ti-omap4/changelog
@@ -1,3 +1,13 @@
+linux-ti-omap4 (3.4.0-1486.6) precise; urgency=low
+
+  [ Xavier Boudet ]
+
+  * UBUNTU: version 3.4.0-1486.6
+  * Fix twd interrupt
+  * omapdce PM
+
+ -- Xavier Boudet <x-boudet@ti.com>  Thu, 21 August 2012 09:49:01 +0200
+
 linux-ti-omap4 (3.4.0-1486.5) precise; urgency=low
 
   [ Xavier Boudet ]
