--- a/debian.ti-omap4/changelog
+++ b/debian.ti-omap4/changelog
@@ -1,3 +1,14 @@
+linux-ti-omap4 (3.4.0-1486.9) precise; urgency=low
+
+  [ Xavier Boudet ]
+
+  * UBUNTU: version 3.4.0-1486.9
+  * clk fixes
+  * ABE init fix
+  * drm fixes
+
+ -- Xavier Boudet <x-boudet@ti.com>  Thu, 30 August 2012 09:03:01 +0200
+
 linux-ti-omap4 (3.4.0-1486.8) precise; urgency=low
 
   [ Xavier Boudet ]
